# Argo-float

./: .gitignore  pyproject.toml  requirements.txt
argo_sample/: 1900683_Rtraj.nc  1900683_meta.nc  1900683_prof.nc  1900683_tech.nc
backend/: data_handler.py  main.py
backend/mcps/: mcp_client.py  mcp_server.py
backend/utils/: logger.py
frontend/: chatbot.py  main.py
