[project]
name = "sih-argo-float"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.67.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "mcp[cli]>=1.14.0",
    "netcdf4>=1.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xarray>=2025.9.0",
]
